2002-11-11  Ross Burton  <ross@burtonini.com>

	* gnome-gnobots2.png: New icon contributed by Timothy Musson.

2002-08-23  Ross Burton  <ross@burtonini.com>

	* game.c:
	* gnobots.c:
	* menu.c:
	* menu.h:
	* properties.c: Enable the high scores dialog. Patch from Andrew
	Sobala <andrew@sobala.net>, fixing #84235.

2002-08-20  Ross Burton  <ross@burtonini.com>

	* menu.c: Rewrite the Quit and New callbacks. Fixes #90984.

2002-07-06  Ross Burton  <ross@burtonini.com>

	* keyboard.c (keyboard_cb): Allow the menu keyboard navigation
	(such as Alt-g) to work.
	* menu.c (about_cb): Allow the About -> Credits dialog to be
	closed.
	(both of these are from Timothy Musson <trmusson@ihug.co.nz>)

2002-06-02  Ross Burton  <ross@burtonini.com>

	* graphics.c: Use the application pixmap path instead of the
	system path, so pixmaps loads if installed in a different prefix
	to libgnome.

2002-06-03  Bastien Nocera  <hadess@hadess.net>

	* menu.c: (about_cb): remove separator in help menu, add icon in the
	about box

2002-05-10  Dave Neary  <bolsh@gimp.org>

	* Makefile.am:
	* game.c:
	* gameconfig.c:
	* gnobots.c:
	* graphics.c:
	* menu.c:
	* properties.c:
	* statusbar.c: Ported gnobots2 to gnome2, and got it
	compiling with -D*_DISABLE_DEPRECATED. Left to do: Change
	all dialogs to "action word" usable stuff. Enable Keynav.
	Handle changes in properties using gconf.

2002-05-05  Chris Lyttle    <chris@wilddev.net>

	* help/C/gnobots2-C.omf : updated for new format of SK 0.3.8.
	* help/C/Makefile.am : updated for new format of SK 0.3.8.
	
2002-04-15  Bastien Nocera  <hadess@hadess.net>

	* gnobots.c: (save_state): remove nstr(), patch from
	r_kinder@yahoo.com (Richard Kinder)

2002-02-17  Chris Lyttle  <chris@wilddev.net>

	* help/C/gnobots2.xml: updated for new template.
	* help/C/Makefile.am:  added legal.xml
	* help/C/legal.xml:  added to comply with new template

2002-02-14  Chris Lyttle    <chris@wilddev.net>

	* help/C/gnobots2.xml : move to XML.
